welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.code
estsurbiscuit()
prendBiscuit()
avance()
prendBiscuit()
avance()